<resources>
    <string name="app_name">LMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="attendence">Attendence</string>
    <string name="Result">Result</string>
    <string name="ContactUs">ContactUs</string>
    <string name="Dashboard">Dashboard</string>
    <string name="label_first_name">User name</string>
    <string name="label_email">Email</string>
    <string name="label_last_name">Last Name</string>

    <string name="label_password">Password</string>
    <string name="label_retypr_password">Retype Password</string>
    <string name="label_register">Sign Up</string>
    <string name="title_registration">Registration</string>
    <string name="label_submit">Submit</string>
    <string name="err_pin_code">Please enter a valid pin code.</string>
    <string name="title_verification">Verification</string>
    <string name="msg_signup">Fill the following fields to signup</string>
    <string name="phone">Phone</string>
    <string name="reg_no">Registration number</string>

</resources>